Refactor: Use maven compiler plugin for Java 21 features
Co-authored-by: madhava.gcp17 <madhava.gcp17@gmail.com>